Change text and styling

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -306,15 +306,16 @@
             <style>
                 .validity-icon {
                     margin-right: 4px;
+                    font-size: 18px;
                 }
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Präsenzprüfungen</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu Präsenzprüfungen</b></div>
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu geöffneten Bereichen der TU Graz</b></div>
                 </div>
                 <div slot="en">
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>On-site exams</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to On-site exams</b></div>
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to opened areas of TU Graz</b></div>
                 </div>
             </dbp-translated>
@@ -322,10 +323,10 @@
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Präsenzlehrveranstaltungen
+                    Zutritt zu Präsenzlehrveranstaltungen
                 </div>
                 <div slot="en">
-                    On-site lectures
+                    Access to on-site lectures
                 </div>
             </dbp-translated>
         </div>
@@ -404,16 +405,17 @@
             <style>
                 .validity-icon {
                     margin-right: 4px;
+                    font-size: 18px;
                     color: var(--dbp-success-dark);
                 }
             </style>
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Präsenzprüfungen</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu Präsenzprüfungen</b></div>
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu geöffneten Bereichen der TU Graz</b></div>
                 </div>
                 <div slot="en">
-                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>On-site exams</b></div>
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to on-site exams</b></div>
                     <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to opened areas of TU Graz</b></div>
                 </div>
             </dbp-translated>
@@ -421,10 +423,10 @@
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Präsenzlehrveranstaltungen
+                    Zutritt zu Präsenzlehrveranstaltungen
                 </div>
                 <div slot="en">
-                    On-site lectures
+                    Access to on-site lectures
                 </div>
             </dbp-translated>
         </div>
