Fix line breaks and icon sizes in validity texts

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -323,10 +323,25 @@
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Zutritt zu Präsenzlehrveranstaltungen
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu Präsenzlehrveranstaltungen</b></div>
                 </div>
                 <div slot="en">
-                    Access to on-site lectures
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to on-site lectures</b></div>
+                </div>
+            </dbp-translated>
+        </div>
+        <div slot="no-full-validity">
+            <style>
+                .gray {
+                    color: #595959;
+                }
+            </style>
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    <div><dbp-icon name='cross-circle' class='validity-icon gray' aria-label='Ungültig'></dbp-icon>Kein Zutritt zu Präsenzlehrveranstaltungen</div>
+                </div>
+                <div slot="en">
+                    <div><dbp-icon name='cross-circle' class='validity-icon gray' aria-label='Invalid'></dbp-icon>No access to on-site lectures</div>
                 </div>
             </dbp-translated>
         </div>
@@ -423,10 +438,25 @@
         <div slot="full-validity">
             <dbp-translated subscribe="lang">
                 <div slot="de">
-                    Zutritt zu Präsenzlehrveranstaltungen
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Gültig'></dbp-icon><b>Zutritt zu Präsenzlehrveranstaltungen</b></div>
                 </div>
                 <div slot="en">
-                    Access to on-site lectures
+                    <div><dbp-icon name='checkmark-circle' class='validity-icon' aria-label='Valid'></dbp-icon><b>Access to on-site lectures</b></div>
+                </div>
+            </dbp-translated>
+        </div>
+        <div slot="no-full-validity">
+            <style>
+                .gray {
+                    color: #595959;
+                }
+            </style>
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    <div><dbp-icon name='cross-circle' class='validity-icon gray' aria-label='Ungültig'></dbp-icon>Kein Zutritt zu Präsenzlehrveranstaltungen</div>
+                </div>
+                <div slot="en">
+                    <div><dbp-icon name='cross-circle' class='validity-icon gray' aria-label='Invalid'></dbp-icon>No access to on-site lectures</div>
                 </div>
             </dbp-translated>
         </div>
