--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -477,17 +477,17 @@
             <dbp-translated subscribe="lang">
                 <div slot="de">
                     <span>
-                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der TU Graz. Genauere Informationen finden Sie unter: 
+                        Vergleichen Sie als Überprüfende/r immer die Tickets, die von Studierenden vorgezeigt werden, mit dem Referenzticket. Der Hintergrund des Ticketbildes wird aus Sicherheitsgründen in regelmäßigen Abständen geändert. Wenn der Hintergrund mit dem des aktuellen Referenztickets übereinstimmt, ist das Ticket gültig. Das Referenzticket berechtigt nicht für den Zugang zu den Räumlichkeiten der TU Graz. Genauere Informationen finden Sie in der 
                         <a target="_blank" class="int-link-external" id="tu-green-link" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
-                            <span>TU Graz greenlight </span>
+                            <span>Übersicht für Überprüfende </span>
                         </a>
                     </span>
                 </div>
                 <div slot="en">
                     <span>
-                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes in regular intervals for security reasons. If the background image matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz. More detailed information can be found at: 
+                        As a verifier, always compare the tickets presented by students with the reference ticket. The background of the ticket image changes in regular intervals for security reasons. If the background image matches the one of the reference ticket, the ticket is valid. The reference ticket does not entitle you to enter rooms at TU Graz. More detailed information can be found in the 
                         <a target="_blank" class="int-link-external" id="tu-green-link" href="https://tu4u.tugraz.at/go/green" title="TU Graz greenlight">
-                            <span>TU Graz greenlight </span>
+                            <span>Overview for verifiers </span>
                         </a>
                     </span>
                 </div>
