--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -92,6 +92,45 @@
 
             --dbp-override-image-nextcloud: url(<%= getUrl('') %>images/nextcloud.svg);
         }
+
+        .light-theme{
+            --dbp-override-base: white;
+            --dbp-override-base-inverted: black;
+            --dbp-override-text: black;
+            --dbp-override-text-inverted: white;
+            --dbp-override-text-muted: #5c5856;
+            --dbp-override-accent: #e4154b;
+            --dbp-override-primary-base: #245b78;
+            --dbp-override-primary-text: white;
+            --dbp-override-primary-border: 1px solid #245b78;
+            --dbp-override-secondary-base: white;
+            --dbp-override-secondary-text: black;
+            --dbp-override-info: #245b78;
+            --dbp-override-success: #138800;
+            --dbp-override-warning-as-text: #af6405;
+            --dbp-override-warning: #ffad4d;
+            --dbp-override-danger: #e4154b;
+            --dbp-override-border: 1px solid black;
+        }
+
+        .dark-theme{
+            --dbp-override-base: black;
+            --dbp-override-base-inverted: white;
+            --dbp-override-text: white;
+            --dbp-override-text-inverted: black;
+            --dbp-override-text-muted: #afaca7;
+            --dbp-override-accent: #e4154b;
+            --dbp-override-primary-base: #73899e;
+            --dbp-override-primary-text: black;
+            --dbp-override-secondary-base: black;
+            --dbp-override-secondary-text: white;
+            --dbp-override-info: #73899e;
+            --dbp-override-success: #138800;
+            --dbp-override-warning-as-text: #ffad4d;
+            --dbp-override-warning: #ffad4d;
+            --dbp-override-danger: #e4154b;
+            --dbp-override-border: 1px solid white;
+        }
     </style>
 
     <!-- Preloading/Preconnecting -->
@@ -121,6 +160,8 @@
     matomo-url="<%= matomoUrl %>"
     matomo-site-id="<%= matomoSiteId %>"
     html-overrides="global-override"
+    themes='[{"class": "light-theme", "icon": "sun", "name": "Light Mode"},
+            {"class": "dark-theme", "icon": "night", "name": "Dark Mode"}]'
 ><dbp-loading-spinner></dbp-loading-spinner>
 
 </<%= name %>>
@@ -160,7 +201,7 @@
                     padding: 0;
                     margin-left: 1em;
                     transition: background-color 0.15s ease 0s, color 0.15s ease 0s;
-                    color: #6c757d;
+                    color: var(--dbp-text-muted);
                     cursor: pointer;
                     text-decoration: none;
                 }
@@ -178,7 +219,7 @@
                     box-shadow: none;
                     -moz-box-shadow: none;
                     -webkit-box-shadow: none;
-                    box-shadow: 0px 0px 4px 2px var(--dbp-accent-dark);
+                    box-shadow: 0px 0px 4px 2px var(--dbp-accent);
                 }
 
             </style>
@@ -209,26 +250,33 @@
         </div>
         <div slot="additional-information">
             <style>
-                .int-link-external{
-                    transition: background-color 0.15s, color 0.15s;
-                    border-bottom: var(--dbp-border-dark);
+                .int-link-external, .int-link-internal, .link, .link-without-hover {
+                    border-bottom: 1px solid var(--dbp-text);
                 }
 
                 .int-link-external:after{
                     content: "\00a0\00a0\00a0";
-                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-                    background-size: 73%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin: 0 0 0 3px;
+                    background-color: var(--dbp-text);
+                    -webkit-mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
+                    mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
+                    -webkit-mask-repeat: no-repeat;
+                    mask-repeat: no-repeat;
+                    -webkit-mask-position: center -2px;
+                    mask-position: center center;
+                    margin: 0 0 0 4px;
                     padding: 0 0 0.25% 0;
-                    animation: 0.15s linkIconOut;
-                    font-size: 103%;
+                    -webkit-mask-size: 100%;
+                    mask-size: 120%;
                 }
 
-                .int-link-external:hover{
-                    color: var(--dbp-hover-text);
+                .int-link-external:hover, .int-link-internal:hover, .link:hover {
+                    color: var(--dbp-hover-text, var(--dbp-text));
+                    border-color: var(--dbp-hover-text, var(--dbp-text));
                     background-color: var(--dbp-hover-base);
+                }
+
+                .int-link-external:hover::after, .int-link-internal:hover::after, .link:hover::after{
+                    background-color: var(--dbp-hover-text, var(--dbp-text));
                 }
 
             </style>
@@ -334,15 +382,17 @@
             <style>
                 .int-link-internal-light{
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: var(--dbp-border-light);
-                    color: var(--dbp-text-light);
+                    border-bottom: var(--dbp-border);
+                    border-color: var(--dbp-text-inverted);
+                    color: var(--dbp-text-inverted);
                 }
 
                 @media only screen
                 and (orientation: portrait)
                 and (max-width:768px) {
                     .int-link-internal-light{
-                        border-bottom: var(--dbp-border-light);
+                        border-bottom: var(--dbp-border);
+                        border-color: var(--dbp-text-inverted);
                     }
 
 
@@ -370,15 +420,17 @@
             <style>
                 .int-link-internal-light{
                     transition: background-color 0.15s, color 0.15s;
-                    border-bottom: var(--dbp-border-light);
-                    color: var(--dbp-text-light);
+                    border-bottom: var(--dbp-border);
+                    border-color: var(--dbp-text-inverted);
+                    color: var(--dbp-text-inverted);
                 }
 
                 @media only screen
                 and (orientation: portrait)
                 and (max-width:768px) {
                     .int-link-internal-light{
-                        border-bottom: var(--dbp-border-light);
+                        border-bottom: var(--dbp-border);
+                        border-color: var(--dbp-text-inverted);
                     }
                 }
             </style>
@@ -404,7 +456,7 @@
                 .validity-icon {
                     margin-right: 4px;
                     font-size: 18px;
-                    color: var(--dbp-success-dark);
+                    color: var(--dbp-success);
                 }
                 .validity-items {
                     display: grid;
@@ -506,23 +558,34 @@
         <div slot="information-container">
             <style>
 
-                .int-link-external-light{
-                    transition: background-color 0.15s, color 0.15s;
-                    border-bottom: var(--dbp-border-light);
-                    color: var(--dbp-text-light);
+                .int-link-external-light {
+                    color: var(--dbp-text-inverted);
+                    border-bottom: 1px solid var(--dbp-text-inverted);
                 }
 
-                .int-link-external-light:after {
-                    filter: invert(100%);
+                .int-link-external-light:after{
                     content: "\00a0\00a0\00a0";
-                    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3Ardf%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%228.6836mm%22%20width%3D%225.2043mm%22%20version%3D%221.1%22%20xmlns%3Acc%3D%22http%3A%2F%2Fcreativecommons.org%2Fns%23%22%20xmlns%3Adc%3D%22http%3A%2F%2Fpurl.org%2Fdc%2Felements%2F1.1%2F%22%20viewBox%3D%220%200%2018.440707%2030.768605%22%3E%3Cg%20transform%3D%22translate(-382.21%20-336.98)%22%3E%3Cpath%20style%3D%22stroke-linejoin%3Around%3Bstroke%3A%23000%3Bstroke-linecap%3Around%3Bstroke-miterlimit%3A10%3Bstroke-width%3A2%3Bfill%3Anone%22%20d%3D%22m383.22%20366.74%2016.43-14.38-16.43-14.37%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
-                    background-size: 73%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin: 0 0 0 3px;
+                    background-color: var(--dbp-text-inverted);
+                    -webkit-mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
+                    mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
+                    -webkit-mask-repeat: no-repeat;
+                    mask-repeat: no-repeat;
+                    -webkit-mask-position: center -2px;
+                    mask-position: center center;
+                    margin: 0 0 0 4px;
                     padding: 0 0 0.25% 0;
-                    animation: 0.15s linkIconOut;
-                    font-size: 103%;
+                    -webkit-mask-size: 100%;
+                    mask-size: 120%;
+                }
+
+                .int-link-external-light:hover {
+                    color: var(--dbp-hover-text, var(--dbp-text-inverted));
+                    border-color: var(--dbp-hover-text, var(--dbp-text-inverted));
+                    background-color: var(--dbp-hover-base);
+                }
+
+                .int-link-external-light:hover::after{
+                    background-color: var(--dbp-hover-text, var(--dbp-text-inverted));
                 }
 
             </style>
