--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -67,28 +67,27 @@
 
         /* TU-Graz style override */
         html {
-             --dbp-override-base-light: #ffffff;
-             --dbp-override-base-dark: #000000;
-             --dbp-override-text-light: #ffffff;
-             --dbp-override-text-dark: #000000;
-             --dbp-override-text-muted-light: #afaca7;
-             --dbp-override-text-muted-dark: #767676;
-             --dbp-override-accent-light: #e4154b;
-             --dbp-override-accent-dark: #e4154b;
-             --dbp-override-primary-light: #73899e;
-             --dbp-override-primary-dark: #245b78;
-             --dbp-override-secondary-light: #ffffff;
-             --dbp-override-secondary-dark: #000000;
-             --dbp-override-info-light: #73899e;
-             --dbp-override-info-dark: #245b78;
-             --dbp-override-success-light: #75c438;
-             --dbp-override-success-dark: #148800;
-             --dbp-override-warning-light: #ffe183;
-             --dbp-override-warning-dark: #c15500;
-             --dbp-override-danger-light: #ff5d79;
-             --dbp-override-danger-dark: #e4154b;
-             --dbp-override-border-light: 1px solid #ffffff;
-             --dbp-override-border-dark: 1px solid #000000;
+            --dbp-override-base: white;
+            --dbp-override-base-inverted: black;
+            --dbp-override-text: black;
+            --dbp-override-text-inverted: white;
+            --dbp-override-text-muted: #5c5856;
+            --dbp-override-accent: #e4154b;
+            --dbp-override-primary-base: #245b78;
+            --dbp-override-primary-text: white;
+            --dbp-override-primary-border: 1px solid #245b78;
+            --dbp-override-secondary-base: white;
+            --dbp-override-secondary-text: black;
+            --dbp-override-info: #245b78;
+            --dbp-override-success: #138800;
+            --dbp-override-warning-as-text: #af6405;
+            --dbp-override-warning-text: black;
+            --dbp-override-warning: #ffad4d;
+            --dbp-override-danger: #e4154b;
+            --dbp-override-border: 1px solid black;
+            --dbp-override-hover-base: black;
+            --dbp-override-hover-text: white;
+
 
             --dbp-override-image-nextcloud: url(<%= getUrl('') %>images/nextcloud.svg);
         }
