--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -369,7 +369,7 @@
                 </div>
                 <div slot="en">
                     No valid stored evidence was found. Show your evidence manually or upload a new evidence by requesting a new ticket under
-                    <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal'>
+                    <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal-light'>
                         <span>Create entry ticket</span>.
                     </a>
                 </div>
