--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -577,11 +577,11 @@
                         <% if(ticketTypes){ %>
                             If a <strong>valid PCR Test</strong> is available on this device then its QR code is displayed and the ticket is shown in <strong>color</strong>. 
                             <br><br>
-                            If a <strong>valid health certitificate</strong> that is not a PCR test is available on this device, then its QR code is displayed and the ticket is shown in <strong>black and white</strong>.
+                            If a <strong>valid health certificate</strong> that is not a PCR test is available on this device, then its QR code is displayed and the ticket is shown in <strong>black and white</strong>.
                             <br><br>
                             The displayed QR code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external-light">GreenCheck</a>.
                         <% } else { %>
-                            If a <strong>valid health certitificate</strong> is available on this device then its QR code is displayed and the ticket is shown in color.
+                            If a <strong>valid health certificate</strong> is available on this device then its QR code is displayed and the ticket is shown in color.
                             This QR code can be checked with <a href="https://greencheck.gv.at/" title="GreenCheck" target="_blank" class="int-link-external-light">GreenCheck</a>.
                             <% if(gpSearchSelfTestStringArray && gpSearchSelfTestStringArray !== '' && selfTestValid){ %>
                                 <br><br>
