--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -57,8 +57,6 @@
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
             font-weight: 300;
             font-size: 16px;
-            background-color: var(--dbp-override-base-light);
-            color: var(--dbp-override-text-dark);
         }
 
         body {
@@ -67,26 +65,25 @@
 
         /* TU-Graz style override */
         html {
-            --dbp-override-base: white;
-            --dbp-override-base-inverted: black;
-            --dbp-override-text: black;
-            --dbp-override-text-inverted: white;
-            --dbp-override-text-muted: #5c5856;
+            --dbp-override-background: white;
+            --dbp-override-content: black;
+
+            --dbp-override-primary: #245b78;
+            --dbp-override-secondary: black;
+            --dbp-override-secondary-surface: white;
+            --dbp-override-on-secondary-surface: black;
+            --dbp-override-secondary-surface-border-color: black;
+
+            --dbp-override-muted: #5c5856;
             --dbp-override-accent: #e4154b;
-            --dbp-override-primary-base: #245b78;
-            --dbp-override-primary-text: white;
-            --dbp-override-primary-border: 1px solid #245b78;
-            --dbp-override-secondary-base: white;
-            --dbp-override-secondary-text: black;
             --dbp-override-info: #245b78;
             --dbp-override-success: #138800;
-            --dbp-override-warning-as-text: #af6405;
-            --dbp-override-warning-text: black;
-            --dbp-override-warning: #ffad4d;
+            --dbp-override-warning: #af6405;
+            --dbp-override-warning-surface: #ffad4d;
+            --dbp-override-on-warning-surface: black;
             --dbp-override-danger: #e4154b;
+
             --dbp-override-border: 1px solid black;
-            --dbp-override-hover-base: black;
-            --dbp-override-hover-text: white;
 
 
             --dbp-override-image-nextcloud: url(<%= getUrl('') %>images/nextcloud.svg);
