--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -339,8 +339,8 @@
                 .int-link-internal-light{
                     transition: background-color 0.15s, color 0.15s;
                     border-bottom: var(--dbp-border);
-                    border-color: var(--dbp-text-inverted);
-                    color: var(--dbp-text-inverted);
+                    border-color: var(--dbp-on-content-surface);
+                    color: var(--dbp-on-content-surface);
                 }
 
                 @media only screen
@@ -348,7 +348,7 @@
                 and (max-width:768px) {
                     .int-link-internal-light{
                         border-bottom: var(--dbp-border);
-                        border-color: var(--dbp-text-inverted);
+                        border-color: var(--dbp-on-content-surface);
                     }
 
 
@@ -377,8 +377,8 @@
                 .int-link-internal-light{
                     transition: background-color 0.15s, color 0.15s;
                     border-bottom: var(--dbp-border);
-                    border-color: var(--dbp-text-inverted);
-                    color: var(--dbp-text-inverted);
+                    border-color: var(--dbp-on-content-surface);
+                    color: var(--dbp-on-content-surface);
                 }
 
                 @media only screen
@@ -386,7 +386,7 @@
                 and (max-width:768px) {
                     .int-link-internal-light{
                         border-bottom: var(--dbp-border);
-                        border-color: var(--dbp-text-inverted);
+                        border-color: var(--dbp-on-content-surface);
                     }
                 }
             </style>
@@ -515,13 +515,13 @@
             <style>
 
                 .int-link-external-light {
-                    color: var(--dbp-text-inverted);
-                    border-bottom: 1px solid var(--dbp-text-inverted);
+                    color: var(--dbp-on-content-surface);
+                    border-bottom: 1px solid var(--dbp-on-content-surface);
                 }
 
                 .int-link-external-light:after{
                     content: "\00a0\00a0\00a0";
-                    background-color: var(--dbp-text-inverted);
+                    background-color: var(--dbp-on-content-surface);
                     -webkit-mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
                     mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
                     -webkit-mask-repeat: no-repeat;
@@ -535,13 +535,13 @@
                 }
 
                 .int-link-external-light:hover {
-                    color: var(--dbp-hover-text, var(--dbp-text-inverted));
-                    border-color: var(--dbp-hover-text, var(--dbp-text-inverted));
+                    color: var(--dbp-hover-text, var(--dbp-on-content-surface));
+                    border-color: var(--dbp-hover-text, var(--dbp-on-content-surface));
                     background-color: var(--dbp-hover-base);
                 }
 
                 .int-link-external-light:hover::after{
-                    background-color: var(--dbp-hover-text, var(--dbp-text-inverted));
+                    background-color: var(--dbp-hover-text, var(--dbp-on-content-surface));
                 }
 
             </style>
