Remove hover for TU style

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -157,15 +157,11 @@
                     padding: 0;
                     margin-left: 1em;
                     transition: background-color 0.15s ease 0s, color 0.15s ease 0s;
-                    color: var(--dbp-text-muted);
+                    color: var(--dbp-muted);
                     cursor: pointer;
                     text-decoration: none;
                 }
 
-                .footer-links a:hover {
-                    color: var(--dbp-hover-text);
-                    background-color: var(--dbp-hover-base);
-                }
 
                 input::-moz-focus-inner { border: 0; }
 
@@ -207,12 +203,12 @@
         <div slot="additional-information">
             <style>
                 .int-link-external, .int-link-internal, .link, .link-without-hover {
-                    border-bottom: 1px solid var(--dbp-text);
+                    border-bottom: 1px solid var(--dbp-content);
                 }
 
                 .int-link-external:after{
                     content: "\00a0\00a0\00a0";
-                    background-color: var(--dbp-text);
+                    background-color: var(--dbp-content);
                     -webkit-mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
                     mask-image: url('data:image/svg+xml;charset=utf-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Ebene_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20viewBox%3D%220%200%2022.7%2062.4%22%20style%3D%22enable-background%3Anew%200%200%2022.7%2062.4%3B%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20transform%3D%22translate%28-382.21%20-336.98%29%22%3E%0A%09%3Cg%3E%0A%09%09%3Cpath%20d%3D%22M386.9%2C380.5c-0.2%2C0-0.4-0.1-0.6-0.3c-0.3-0.3-0.3-0.8%2C0.1-1.1l12.5-10.9l-12.5-10.9c-0.3-0.3-0.4-0.8-0.1-1.1%0A%09%09%09c0.3-0.3%2C0.8-0.4%2C1.1-0.1l13.1%2C11.5c0.2%2C0.2%2C0.3%2C0.4%2C0.3%2C0.6s-0.1%2C0.5-0.3%2C0.6l-13.1%2C11.5C387.3%2C380.4%2C387.1%2C380.5%2C386.9%2C380.5z%22%0A%09%09%09%2F%3E%0A%09%3C%2Fg%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A');
                     -webkit-mask-repeat: no-repeat;
@@ -223,16 +219,6 @@
                     padding: 0 0 0.25% 0;
                     -webkit-mask-size: 100%;
                     mask-size: 120%;
-                }
-
-                .int-link-external:hover, .int-link-internal:hover, .link:hover {
-                    color: var(--dbp-hover-text, var(--dbp-text));
-                    border-color: var(--dbp-hover-text, var(--dbp-text));
-                    background-color: var(--dbp-hover-base);
-                }
-
-                .int-link-external:hover::after, .int-link-internal:hover::after, .link:hover::after{
-                    background-color: var(--dbp-hover-text, var(--dbp-text));
                 }
 
             </style>
@@ -532,16 +518,6 @@
                     padding: 0 0 0.25% 0;
                     -webkit-mask-size: 100%;
                     mask-size: 120%;
-                }
-
-                .int-link-external-light:hover {
-                    color: var(--dbp-hover-text, var(--dbp-on-content-surface));
-                    border-color: var(--dbp-hover-text, var(--dbp-on-content-surface));
-                    background-color: var(--dbp-hover-base);
-                }
-
-                .int-link-external-light:hover::after{
-                    background-color: var(--dbp-hover-text, var(--dbp-on-content-surface));
                 }
 
             </style>
