Add a no-ticket-required attribute and notify the user if it is set
Adds a "no-ticket-required" to all activities and if set will show
a notification, telling the user that currently the app is inactive
and that no ticket is required.

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -105,6 +105,7 @@
     gp-search-self-test-string-array="<%= gpSearchSelfTestStringArray %>"
     <% if(selfTestValid) { %> gp-self-test-valid <% } %>
     <% if(ticketTypes) { %> ticket-types="<%= ticketTypes %>" <% } %>
+    <% if(noTicketRequired) { %> no-ticket-required="" <% } %>
     preselected-option="<%= preselectedOption %>"
     service-name="<%= serviceName %>"
     file-handling-enabled-targets="local"
