Update css variables

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -79,6 +79,7 @@
             --dbp-override-info: #245b78;
             --dbp-override-success: #138800;
             --dbp-override-warning: #af6405;
+            --dbp-override-warning-surface-border-color: #ffad4d;
             --dbp-override-warning-surface: #ffad4d;
             --dbp-override-on-warning-surface: black;
             --dbp-override-danger: #e4154b;
