--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -145,7 +145,7 @@
                     padding: 0 50px 0 0;
                 }
             </style>
-            <dbp-tugraz-logo id="main-logo" subscribe="lang"></dbp-tugraz-logo>
+            <tug-logo id="main-logo" subscribe="lang"></tug-logo>
         </div>
         <div slot="footer-links">
             <style>
