--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -145,7 +145,9 @@
                     padding: 0 50px 0 0;
                 }
             </style>
-            <tug-logo id="main-logo" subscribe="lang"></tug-logo>
+            <a href="https://www.tugraz.at" title="TU Graz Home" target="_blank" rel="noopener">
+                <tug-logo id="main-logo" subscribe="lang"></tug-logo>
+            </a>
         </div>
         <div slot="footer-links">
             <style>
