--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -142,7 +142,7 @@
             </style>
             <dbp-tugraz-logo id="main-logo" subscribe="lang"></dbp-tugraz-logo>
         </div>
-        <div slot="footer-links">
+        <div slot="footer-links" class="footer-links">
             <dbp-translation subscribe="lang, lang-dir" key="footer-privacy-policy" var='{"linkDE": "https://www.tugraz.at/ueber-diese-seite/datenschutzerklaerung/", "linkEN": "https://www.tugraz.at/en/about-this-page/privacy-policy/"}' unsafe>
             </dbp-translation>
             <dbp-translation subscribe="lang, lang-dir" key="footer-legal-notice" var='{"linkDE": "https://www.tugraz.at/ueber-diese-seite/impressum/", "linkEN": "https://www.tugraz.at/en/about-this-page/legal-notice/"}' unsafe>
