Add theme support

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -62,7 +62,7 @@
         }
 
         /* TU-Graz style override */
-        html {
+        .light-theme {
             --dbp-override-background: white;
             --dbp-override-content: black;
 
@@ -77,8 +77,8 @@
             --dbp-override-info: #245b78;
             --dbp-override-success: #138800;
             --dbp-override-warning: #af6405;
-            --dbp-override-warning-surface-border-color: #ffad4d;
             --dbp-override-warning-surface: #ffad4d;
+            --dbp-override-warning-surface-border-color: #ffad4d;
             --dbp-override-on-warning-surface: black;
             --dbp-override-danger: #e4154b;
 
@@ -116,6 +116,7 @@
     matomo-url="<%= matomoUrl %>"
     matomo-site-id="<%= matomoSiteId %>"
     html-overrides="global-override"
+    themes='[{"class": "light-theme", "icon": "sun", "name": "Light Mode"}]'
 ><tug-spinner id='spinner'></tug-spinner>
 
 </<%= name %>>
