Separate university specific assets from whitelabel assets

--- a/assets/dbp-greenlight.topic.metadata.json.ejs
+++ b/assets/dbp-greenlight.topic.metadata.json.ejs
@@ -1,11 +1,11 @@
 {
   "name": {
-    "de": "TU Graz greenlight",
-    "en": "TU Graz greenlight"
+    "de": "dbp greenlight",
+    "en": "dbp greenlight"
   },
   "short_name": {
-    "de": "TU Graz greenlight",
-    "en": "TU Graz greenlight"
+    "de": "dbp greenlight",
+    "en": "dbp greenlight"
   },
   "description": {
     "de": "Erstellen Sie ein Eintrittsticket und importieren Sie Ihren Nachweis einer geringen epidemiologischen Gefahr auf diesem Gerät, um ihn so schon vor dem Besuch einer Lehrveranstaltung oder Prüfung für den Eintritt zu validieren. Das Ticket ermöglicht Ihnen anschließend den schnellen und effizienten Zugang zu den Räumlichkeiten der Universität.",
