make meta property url customizeable in app.config

--- a/assets/dbp-greenlight.html.ejs
+++ b/assets/dbp-greenlight.html.ejs
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="<%= shortName %> greenlight: Dein Eintrittsticket in die Universität | <%= shortName %>" />
     <meta property="og:description" content="Erstellen Sie ein Eintrittsticket mit <%= shortName %> greenlight und importieren Sie Ihren Nachweis, um ihn so schon vor dem Besuch der Universität für den Eintritt zu validieren." />
-    <meta property="og:url" content="https://greenlight.tugraz.at/" />
+    <meta property="og:url" content="<%= appDomain %>" />
     <meta property="og:site_name" content="<%= shortName %> greenlight" />
 
     <!-- Favicons -->
